# agent_aura

./: .env  .gitignore  .pre-commit-config.yaml  .replit  Dockerfile  Makefile  README.MD  README.md  README_v1.md  README_v2.md  ROADMAP.md  activate_env.sh  app.py  cleanup_unused.py  docker-compose.yml  pyproject.toml  replit.md  replit_v1.md  replit_v2.md  start_backend.py
agent_aura/: main.py
agent_service/: __init__.py  main.py
agents/: auditor_agent.py
attached_assets/: Pasted--Agent-Validator-Agent-Metrics-auc-0-4722222222222222-roc-data-fpr-0-0-0-0833333333-1750967984176_1750967984179.txt  Pasted--Goal-Reclarification-You-re-building-a-Credit-Risk-Model-Validation-System-powered-by-1750937313983_1750937313984.txt  Pasted--ValiCred-AI-Credit-Risk-Model-Validation-System--1750964627789_1750964627790.txt  Pasted--You-re-building-a-Credit-Risk-Model-Validation-System-powered-by-agentic-AI-with-Hu-1750965743595_1750965743596.txt  Pasted-Great-here-s-a-detailed-content-structure-for-each-of-the-three-reports-you-mentioned-aligned-1750951401271_1750951401274.txt
backend/: langgraph_workflow.py
config/: compliance_frameworks.json  mcp_agents.json  settings.py  ui_settings.json  validation_parameters.json  workflow_config.json
core/: llm_manager.py
data/: real_data_loader.py
docs/: ONBOARDING.md  agent-design.md  architecture.md  deployment.md  hitl.md  memory-and-state.md  module-guide.md  observability.md  rag-compliance.md  reporting.md  roadmap.md  tool-development.md  workflows.md
docs/other/: README.md  (+3 more)
requirements/: base.txt  local.txt
sample_data/: credit_data.csv  model_methodology_document.txt  validation_parameters.csv
scripts/: __init__.py  cli.py  run.txt  test_workflows.py
src/: __init__.py
ui/: configuration_panel.py
(+92 files in other folders)
