[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
    "uvicorn>=0.34.3",
]
