[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.55.0",
    "fastapi>=0.115.13",
    "google-genai>=1.22.0",
    "groq>=0.29.0",
    "numpy>=2.3.1",
    "openai>=1.91.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]
